<resources>
    <string name="app_name">Trans2021</string>
    <string name="tab_text_1">ListView</string>
    <string name="tab_text_2">SearchView</string>
    <string name="tab_text_3">MapView</string>
    <string name="no_deezer_profile">\" n\'a pas de profil Deezer.\"</string>
    <string name="no_spotify_profile">\" n\'a pas de profil Spotify.\"</string>
    <string name="star_rating">Popularité</string>
    <string name="community_s_thoughts">Avis de la communauté</string>
    <string name="unknown_artists">Artistes inconnus</string>
    <string name="last_edition">Dernière édition</string>
    <string name="signin">Se connecter</string>
    <string name="signout_dialog_title">Déconnexion</string>
    <string name="signout_dialog_message">Êtes-vous sûr ?</string>
    <string name="cancel">Annuler</string>
    <string name="ok">Ok</string>
    <string name="shared_prefs_artist_rec_id">KEY_ID_ARTIST</string>
    <string name="rate">Noter</string>
    <string name="comments">Commentaires</string>
    <string name="past_dates">Dates précédentes</string>
    <string name="insert_your_comment">Entrez votre commentaire</string>
    <string name="can_t_open_spotify">Vous n\'avez pas d\'application qui puisse permettre d\'ouvrir le profil Spotify.</string>
    <string name="can_t_open_deezer">Vous n\'avez pas d\'application qui puisse permettre d\'ouvrir le profil Deezer.</string>
    <string name="url_spotify">https://open.spotify.com/</string>
    <string name="url_deezer">https://www.deezer.com/fr/album/</string>
    <string name="artist_does_not_exist">L\'artiste n\'existe pas</string>
    <string name="title_list">Liste</string>
    <string name="title_search">Recherche</string>
    <string name="search_criteria">Recherche par critères</string>
    <string name="title_map">Carte</string>
    <string name="title_profile">Profil</string>
    <string name="your_rate">Votre note :</string>
    <string name="require_connextion_dialog_title">Connexion obligatoire</string>
    <string name="require_connextion_dialog_message">Cette action requiert un compte, voulez-vous vous connecter ?</string>
    <string name="search_name">Par nom</string>
    <string name="search_year">Par année</string>
    <string name="search_origin">Par pays d\'origine</string>
    <string name="search">Rechercher</string>
    <string name="originHint">Entrez le pays d\'origine de l\'artiste</string>
    <string name="yearHint">Cliquez pour selectionner l\'année</string>
    <string name="nameHint">Entrez le nom de l\'artiste</string>
    <string name="please_login">Veuillez vous connecter afin d\'accéder à toutes les fonctionnalités de l\'application.</string>
    <string name="fave_artists">Artistes préférés</string>
    <string name="log_out">déconnexion 😔</string>
    <string name="url_photo">URL de votre photo de profil</string>
    <string name="modif_photo">Modification de photo</string>
    <string name="error_url_photo">L\'URL ne renvoie pas de photo</string>
    <string name="no_filter">Vous n\'avez pas mis de filtre.</string>
    <string name="filter_no_match">Nous n\'avons trouvé aucun groupe ou artiste avec ces filtres.</string>
    <string name="country_search">Pays d\'origine: %1s</string>
    <string name="year_search">Année: %1s</string>
    <string name="name_search">Nom: %1s</string>
    <string name="filtres">Filtres :</string>
</resources>