<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:padding="2dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="24dp"
        android:id="@+id/rounded_image"
        app:srcCompat="@mipmap/ic_launcher"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="2dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_photo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/cancel_button"
            android:layout_margin="4dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        <Button
            android:id="@+id/ok_button"
            android:layout_margin="4dp"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    </LinearLayout>
</LinearLayout>